Allow multiple headers in parquet import definition ()